# XBoom

./: .editorconfig  .gitignore  README.md  RELEASES.md  aiwritex_installer.iss  aiwritex_windows.spec  build_windows_installer.ps1  debug-custom-api-blocked.md  main.py  pyproject.toml  pytest.ini  requirements.txt  temp_main_before.js  version-policy.json  z-image专用nf4快速备份.json  一键更新.bat  修复WebView2.bat  启动-浏览器.bat  启动.bat  启动小爆来咯.bat  恢复系统WebView2.bat
.dbg/: importtime_web_app.txt  importtime_web_app_after1.txt  importtime_web_app_after2.txt  importtime_web_app_after_scheduler.txt  test_webview.py  test_webview2_udf.py  test_webview_mshtml.py  trae-debug-log-custom-api-blocked.ndjson
docs/: Agnes AI注册到创建Key教程.md  uninstall-user-data.md  version-policy.example.json  使用统计部署说明.md  功能详解手册-飞书版.md  小白使用手册-飞书版-clean.md  小白使用手册-飞书版.md  小白使用手册.md  新手入门指南-飞书版.md  新手入门指南.md
installer_assets/: README.txt  launch_xboom.bat
releases/: version-policy.json
scripts/: _menu_ip_whitelist_init.sql  _remote_baota_add_database.py  _remote_check_baota_db.py  _remote_check_visits.py  _remote_cleanup_panel_db.py  _remote_create_xboom_user.py  _remote_deploy_all.py  _remote_enc2.py  _remote_enc3.py  _remote_encrypt_bt_pass.py  _remote_find_bcxtech.py  _remote_find_db_api.py  _remote_fix_baota_panel.py  _remote_fix_database_db.py  _remote_patch_xboom_row.py  _remote_read_adddb.py  _remote_sync_baota_xboom.py  analyze_pyinstaller_warnings.py  audit_text_encoding.py  check_dist_bundle.py  clean_workspace.py  cloud-update.env.example  delete-gitee-release.ps1  deploy-update-mirror.ps1  doctor.py  (+28 more)
(+1192 files in other folders)
