[project]
name = "ai_write_x"
version = "1.2.18"
description = "AIWriteX/XBoom intelligent content creation desktop app"
authors = [{ name = "iniwap", email = "iniwaper@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
  "aiforge-engine>=0.0.19",
  "aiohttp>=3.9.0",
  "asyncpg",
  "beautifulsoup4==4.13.4",
  "chardet>=5.2,<6",
  "chromadb>=0.4.0",
  "crewai==0.102.0",
  "cryptography",
  "Cython==3.0.0",
  "dashscope==1.22.1",
  "fastapi>=0.117.1",
  "feedparser>=6.0.0",
  "jinja2>=3.1.0",
  "lxml",
  "markdown==3.8.2",
  "numpy>=1.24.0",
  "openai>=1.0.0",
  "peewee==3.17.9",
  "Pillow>=10.4.0",
  "pinecone>=4.0.0",
  "playwright>=1.40.0",
  "psutil>=5.9.0",
  "psycopg2-binary",
  "pydantic",
  "pymilvus>=2.4.0",
  "pymysql",
  "pystray>=0.19.5",
  "python_dateutil==2.8.2",
  "python-multipart>=0.0.6",
  "pywebview>=6.0",
  "PyYAML==6.0.1",
  "qdrant-client>=1.7.0",
  "Requests==2.32.3",
  "rich",
  "scipy>=1.10.0",
  "setuptools",
  "sqlmodel",
  "tomlkit==0.13.2",
  "uvicorn>=0.30.0",
  "weaviate-client>=4.0.0",
  "websocket-client>=1.6.0",
  "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
]

[project.scripts]
ai_write_x = "ai_write_x.main:run"
run_crew = "ai_write_x.main:run"
train = "ai_write_x.main:train"
replay = "ai_write_x.main:replay"
test = "ai_write_x.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
